Fix misaligned buttons on Special:MobileLanguages
Bug: T291871

--- a/resources/mobile.special.pagefeed.styles/pagefeed.less
+++ b/resources/mobile.special.pagefeed.styles/pagefeed.less
@@ -1,23 +1,5 @@
 @import '../../mobile.less/mobile.variables.less';
 
-// FIXME [mediawiki ui] These rules should not be needed and are specifically for Watchlist
-// This should use another MediaWiki UI widget
-.content-header .mw-ui-button-group {
-	li.mw-ui-button {
-		padding: 0;
-		min-width: 30%;
-	}
-
-	a,
-	a:visited,
-	a:hover {
-		padding: 0.5em 1em;
-		display: block;
-		color: inherit;
-		text-decoration: none;
-	}
-}
-
 .page-header-bar {
 	li,
 	div {
@@ -55,6 +37,30 @@
 			font-weight: bold;
 		}
 		/* stylelint-enable no-descending-specificity */
+	}
+}
+
+// FIXME [mediawiki ui] These rules should not be needed and are specifically for Watchlist
+// This should use another MediaWiki UI widget
+// stylelint-disable no-descending-specificity
+.content-header .mw-ui-button-group {
+	li {
+		// override '.content li' default margin
+		margin: 0;
+	}
+
+	li.mw-ui-button {
+		padding: 0;
+		min-width: 30%;
+	}
+
+	a,
+	a:visited,
+	a:hover {
+		padding: 0.5em 1em;
+		display: block;
+		color: inherit;
+		text-decoration: none;
 	}
 }
 
